--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>HUE HUE SEARCH</h1>
+    <h1>SEARCH</h1>
     <form action="https://www.google.com/search">
         <div class="search-box">
             <input class="search-txt" type="text" name="q" placeholder="Type to search">
