--- a/index.html
+++ b/index.html
@@ -1,28 +1,12 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet">
-    <title>Project 0</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project-0</title>
 </head>
-
 <body>
-    <h1>SEARCH</h1>
-    <form action="https://www.google.com/search">
-        <div class="search-box">
-            <input class="search-txt" type="text" name="q" placeholder="Type to search">
-            <div class="search-btn">
-                <i class="fas fa-search">
-                </i>
-                <input class="inp" type="submit" value="">
-            </div>
-        </div>
-    </form>
+    
 </body>
-
 </html>
