normal search complete

--- a/image.html
+++ b/image.html
@@ -14,22 +14,20 @@
 </head>
 
 <body>
-    <header class="head">
-        <div id="links">
-            <a href="image.html">Images Search</a>
+    <header>
+        <div class="links">
+            <a href="index.html">Google Search</a>
             <a href="advanced.html">Advanced Search</a>
         </div>
     </header>
-    <div id="main">
-        <div id="image">
-            <img src="img.png"/>
-        </div>
+    <div class="main">
+        <img src="img.png" class="img-fluid" alt="Responsive Image" width="450" height="170"/>
         <form action="https://google.com/search">
-            <div id="inputfield">
+            <div class="inputfield">
                 <i class="fas fa-search" style="color: #9aa0a6;"></i>
                 <input type="text" name="q">
             </div>
-            <div id="button">
+            <div class="button">
                 <input type="submit" value="Google Search">
                 <input type="submit" value="I'm Feeling Lucky">
             </div>
