--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <form action="https://google.com/search">
             <div id="inputfield">
                 <i class="fas fa-search" style="color: #9aa0a6;"></i>
-                <input type="text" name="q">
+                <input type="text" name="q" autofocus>
             </div>
             <div id="button">
                 <input type="submit" value="Google Search">
