--- a/advanced.html
+++ b/advanced.html
@@ -14,20 +14,22 @@
 </head>
 
 <body>
-    <header>
-        <div class="links">
+    <header class="head">
+        <div id="links">
             <a href="image.html">Images Search</a>
             <a href="index.html">Google Search</a>
         </div>
     </header>
-    <div class="main">
-        <img src="img.png" class="img-fluid" alt="Responsive Image" width="450" height="170"/>
+    <div id="main">
+        <div id="image">
+            <img src="img.png"/>
+        </div>
         <form action="https://google.com/search">
-            <div class="inputfield">
+            <div id="inputfield">
                 <i class="fas fa-search" style="color: #9aa0a6;"></i>
                 <input type="text" name="q">
             </div>
-            <div class="button">
+            <div id="button">
                 <input type="submit" value="Google Search">
                 <input type="submit" value="I'm Feeling Lucky">
             </div>
