--- a/advanced.html
+++ b/advanced.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-0</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <title>Google Advanced Search</title>
+    <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 </head>
@@ -24,14 +22,44 @@
         <div id="image">
             <img src="img.png"/>
         </div>
+        <div>Advanced Search</div>
+        <hr>
+        <div id="pages">Find pages with...</div>
+        <div id="todo">To do this in the search box.</div>
         <form action="https://google.com/search">
-            <div id="inputfield">
-                <i class="fas fa-search" style="color: #9aa0a6;"></i>
-                <input type="text" name="q">
+            <div class="inputone">
+                <div class="testdes">all these words:</div>
+                <div class="inputfield">
+                    <input type="text" name="as_q">
+                </div>
+                <div class="tododes">Type the important words: tri-colour rat terrier</div>
             </div>
-            <div id="button">
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky">
+            <div class="inputone">
+                <div class="testdes">this exact word or phrase:</div>
+                <div class="inputfield">
+                    <input type="text" name="as_epq">
+                </div>
+                <div class="tododes">Put exact words in quotes: "rat terrier"</div>
+            </div>
+            <div class="inputone">
+                <div class="testdes">any of these words:</div>
+                <div class="inputfield">
+                    <input type="text" name="as_oq">
+                </div>
+                <div class="tododes">Type OR between all the words you want: miniature OR standard</div>
+            </div>
+            <div class="inputone">
+                <div class="testdes">none of these words:</div>
+                <div class="inputfield">
+                    <input type="text" name="as_eq">
+                </div>
+                <div class="tododes">Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</div>
+            </div>
+            <div class="inputone">
+                <div class="testdes"></div>
+                <div class="button">
+                    <input type="submit" value="Advanced Search" name="btnK">
+                </div>
             </div>
         </form>
     </div>
