--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-0</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 </head>
@@ -21,7 +19,7 @@
         </div>
     </header>
     <div id="main">
-        <div id="image">
+        <div>
             <img src="img.png"/>
         </div>
         <form action="https://google.com/search">
@@ -30,8 +28,8 @@
                 <input type="text" name="q" autofocus>
             </div>
             <div id="button">
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky">
+                <input type="submit" value="Google Search" name="btnK">
+                <input type="submit" value="I'm Feeling Lucky" name="btnI">
             </div>
         </form>
     </div>
