--- a/advanced.html
+++ b/advanced.html
@@ -14,7 +14,6 @@
 <body>
     <header class="head">
         <div id="links">
-            <a href="image.html">Images Search</a>
             <a href="index.html">Google Search</a>
         </div>
     </header>
@@ -22,7 +21,7 @@
         <div id="image">
             <img src="img.png"/>
         </div>
-        <div>Advanced Search</div>
+        <div class="adv">Advanced Search</div>
         <hr>
         <div id="pages">Find pages with...</div>
         <div id="todo">To do this in the search box.</div>
