--- a/advanced.html
+++ b/advanced.html
@@ -18,44 +18,50 @@
         </div>
     </header>
     <div id="main">
-        <div id="image">
-            <img src="img.png"/>
+        <div id="area">
+            <div id="image">
+                <img src="img.png" />
+            </div>
+            <div class="adv">Advanced Search</div>
+            <hr>
         </div>
-        <div class="adv">Advanced Search</div>
-        <hr>
-        <div id="pages">Find pages with...</div>
-        <div id="todo">To do this in the search box.</div>
         <form action="https://google.com/search">
             <div class="inputone">
-                <div class="testdes">all these words:</div>
+                <div class="textdes">Find pages with...</div>
+                <div class="inputfield"></div>
+                <div class="tododes">To do this in the search box.</div>
+            </div>
+            <div class="inputone">
+                <div class="textdes">all these words:</div>
                 <div class="inputfield">
                     <input type="text" name="as_q">
                 </div>
                 <div class="tododes">Type the important words: tri-colour rat terrier</div>
             </div>
             <div class="inputone">
-                <div class="testdes">this exact word or phrase:</div>
+                <div class="textdes">this exact word or phrase:</div>
                 <div class="inputfield">
                     <input type="text" name="as_epq">
                 </div>
                 <div class="tododes">Put exact words in quotes: "rat terrier"</div>
             </div>
             <div class="inputone">
-                <div class="testdes">any of these words:</div>
+                <div class="textdes">any of these words:</div>
                 <div class="inputfield">
                     <input type="text" name="as_oq">
                 </div>
                 <div class="tododes">Type OR between all the words you want: miniature OR standard</div>
             </div>
             <div class="inputone">
-                <div class="testdes">none of these words:</div>
+                <div class="textdes">none of these words:</div>
                 <div class="inputfield">
                     <input type="text" name="as_eq">
                 </div>
-                <div class="tododes">Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</div>
+                <div class="tododes">Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"
+                </div>
             </div>
             <div class="inputone">
-                <div class="testdes"></div>
+                <div class="textdes"></div>
                 <div class="button">
                     <input type="submit" value="Advanced Search" name="btnK">
                 </div>
