--- a/advanced.html
+++ b/advanced.html
@@ -27,37 +27,37 @@
         </div>
         <form action="https://google.com/search">
             <div class="inputone">
-                <div class="textdes">Find pages with...</div>
+                <div class="textdesheading">Find pages with...</div>
                 <div class="inputfield"></div>
-                <div class="tododes">To do this in the search box.</div>
+                <div class="tododesheading">To do this in the search box.</div>
             </div>
             <div class="inputone">
                 <div class="textdes">all these words:</div>
                 <div class="inputfield">
                     <input type="text" name="as_q">
                 </div>
-                <div class="tododes">Type the important words: tri-colour rat terrier</div>
+                <div class="tododes">Type the important words: <span>tri-colour rat terrier</span> </div>
             </div>
             <div class="inputone">
                 <div class="textdes">this exact word or phrase:</div>
                 <div class="inputfield">
                     <input type="text" name="as_epq">
                 </div>
-                <div class="tododes">Put exact words in quotes: "rat terrier"</div>
+                <div class="tododes">Put exact words in quotes: <span>"rat terrier"</span></div>
             </div>
             <div class="inputone">
                 <div class="textdes">any of these words:</div>
                 <div class="inputfield">
                     <input type="text" name="as_oq">
                 </div>
-                <div class="tododes">Type OR between all the words you want: miniature OR standard</div>
+                <div class="tododes">Type OR between all the words you want: <span>miniature OR standard</span></div>
             </div>
             <div class="inputone">
                 <div class="textdes">none of these words:</div>
                 <div class="inputfield">
                     <input type="text" name="as_eq">
                 </div>
-                <div class="tododes">Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"
+                <div class="tododes">Put a minus sign just before words that you don't want: <span>-rodent, -"Jack Russell"</span>
                 </div>
             </div>
             <div class="inputone">
