--- a/advanced.html
+++ b/advanced.html
@@ -25,7 +25,7 @@
             <div class="adv">Advanced Search</div>
             <hr>
         </div>
-        <form action="https://google.com/search">
+        <form action="https://google.com/search" autocomplete="off">
             <div class="inputone">
                 <div class="textdesheading">Find pages with...</div>
                 <div class="inputfield"></div>
