--- a/image.html
+++ b/image.html
@@ -22,7 +22,7 @@
         <div>
             <img src="img1.png" />
         </div>
-        <form action="https://google.com/images">
+        <form action="https://google.com/images" autocomplete="off">
             <div id="inputfield">
                 <i class="fas fa-search fa-sm" style="color: #9aa0a6;"></i>
                 <input type="text" name="q">
