--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div>
             <img src="img.png"/>
         </div>
-        <form action="https://google.com/search">
+        <form action="https://google.com/search" autocomplete="off">
             <div id="inputfield">
                 <i class="fas fa-search" style="color: #9aa0a6;"></i>
                 <input type="text" name="q" autofocus>
